--- a/appsettings.json
+++ b/appsettings.json
@@ -7,11 +7,13 @@
     }
   },
   "AIOrganizer": {
-    "ApiKey": "YOUR_GEMINI_API_KEY",
-    "ModelName": "gemini-pro",
-    "MaxPromptChars": 4000,
+    "ApiKey": "AIzaSyDKbr0af4HYPKDYJfDBn8UisDpLW8nNj5w",
+    "ModelName": "gemini-1.5-pro-latest",
+    "MaxPromptChars": 8000,
     "FallbackCategory": "Overig",
     "SupportedExtensions": [ ".pdf", ".docx", ".txt", ".md" ],
+    "EnableDescriptiveFilenames": true,
+    "EnableFileRenaming": true,
     "Categories": {
       "Financiën": "1. Financiën",
       "Belastingen": "2. Belastingen",
