--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,10 @@
     }
   },
   "AIOrganizer": {
-    "ApiKey": "",
-    "ModelName": "gemini-1.5-pro-latest",
+    "ApiKey": "", // <-- VOER HIER JE API-SLEUTEL IN
+    "ModelName": "gemini-1.5-pro-latest", // Of een ander model uit je UI-selectie, bijv. "gemini-1.0-pro"
     "MaxPromptChars": 8000,
-    "FallbackCategory": "Overig",
+    "FallbackCategory": "Overig", // Dit is de CATEGORIENAAM die de AI moet retourneren voor fallback
     "SupportedExtensions": [ ".pdf", ".docx", ".txt", ".md" ],
     "EnableDescriptiveFilenames": true,
     "EnableFileRenaming": true,
@@ -26,7 +26,8 @@
       "Hobbies en interesses": "9. Hobbies en interesses",
       "Carrière en Professionele Ontwikkeling": "10. Carrière en Professionele Ontwikkeling",
       "Bedrijfsadministratie": "11. Bedrijfsadministratie",
-      "Reizen en vakanties": "12. Reizen en vakanties"
+      "Reizen en vakanties": "12. Reizen en vakanties",
+      "Overig": "0. Overig" // <-- TOEGEVOEGD: Mapping voor de FallbackCategory
     }
   }
 }
