--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "AIOrganizer": {
-    "ApiKey": "",
+    "ApiKey": "AIzaSyDKbr0af4HYPKDYJfDBn8UisDpLW8nNj5w",
     "ModelName": "gemini-1.5-pro-latest",
     "MaxPromptChars": 8000,
     "FallbackCategory": "Overig",
