--- a/AI-bestandsorganizer.csproj
+++ b/AI-bestandsorganizer.csproj
@@ -11,12 +11,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="3.3.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.5" />
     <PackageReference Include="Mscc.GenerativeAI" Version="2.5.6" />
+    <PackageReference Include="OpenAI" Version="2.1.0" />
     <PackageReference Include="PdfPig" Version="0.1.10" />
     
   </ItemGroup>
