--- a/appsettings.json
+++ b/appsettings.json
@@ -7,26 +7,166 @@
     }
   },
   "AIOrganizer": {
-    "ApiKey": "AIzaSyDKbr0af4HYPKDYJfDBn8UisDpLW8nNj5w",
+    "ApiKey": "YOUR_API_KEY_HERE", // Remember to replace placeholders
     "ModelName": "gemini-1.5-pro-latest",
     "MaxPromptChars": 8000,
-    "FallbackCategory": "Overig",
+    "FallbackCategory": "Overig", // This is the KEY the AI might return for fallback
     "SupportedExtensions": [ ".pdf", ".docx", ".txt", ".md" ],
     "EnableDescriptiveFilenames": true,
     "EnableFileRenaming": true,
+    "GenerateMetadataFiles": false, // Assuming this is a setting you have
+    "EnableOcr": false, // Assuming this is a setting you have
     "Categories": {
-      "Financiën": "1. Financiën",
-      "Belastingen": "2. Belastingen",
-      "Verzekeringen": "3. Verzekeringen",
-      "Woning": "4. Woning",
-      "Gezondheid en Medisch": "5. Gezondheid en Medisch",
-      "Familie en Kinderen": "6. Familie en Kinderen",
-      "Voertuigen": "7. Voertuigen",
-      "Persoonlijke Documenten": "8. Persoonlijke Documenten",
-      "Hobbies en interesses": "9. Hobbies en interesses",
-      "Carrière en Professionele Ontwikkeling": "10. Carrière en Professionele Ontwikkeling",
-      "Bedrijfsadministratie": "11. Bedrijfsadministratie",
-      "Reizen en vakanties": "12. Reizen en vakanties"
+      // --- FINANCES ---
+      "Bankafschriften": "1.01. Bankafschriften",
+      "Creditcardafschriften": "1.02. Creditcardafschriften",
+      "Beleggingen en Investeringen": "1.03. Beleggingen en Investeringen",
+      "Leningen en Schulden": "1.04. Leningen en Schulden",
+      "Budgetten en Uitgavenplanning": "1.05. Budgetten en Uitgavenplanning",
+      "Pensioendocumenten": "1.06. Pensioendocumenten",
+      "Financiële Overzichten en Rapporten (Privé)": "1.07. Financiële Overzichten en Rapporten (Privé)",
+      "Donaties en Giften": "1.08. Donaties en Giften",
+      "Facturen Betaald (Privé)": "1.09. Facturen Betaald (Privé)",
+      "Garantiebewijzen en Aankoopbonnen": "1.10. Garantiebewijzen en Aankoopbonnen",
+
+      // --- TAXES ---
+      "Belastingaangiften": "2.01. Belastingaangiften",
+      "Belastingaanslagen": "2.02. Belastingaanslagen",
+      "Toeslagen Belastingdienst": "2.03. Toeslagen (Huur, Zorg, etc.)",
+      "Correspondentie Belastingdienst": "2.04. Correspondentie Belastingdienst",
+
+      // --- INSURANCE ---
+      "Zorgverzekeringspolis": "3.01. Zorgverzekeringspolis",
+      "Zorgverzekering Declaraties en Facturen": "3.02. Zorgverzekering Declaraties en Facturen",
+      "Autoverzekeringspolis": "3.03. Autoverzekeringspolis",
+      "Inboedelverzekeringspolis": "3.04. Inboedelverzekeringspolis",
+      "Opstalverzekeringspolis": "3.05. Opstalverzekeringspolis",
+      "Aansprakelijkheidsverzekeringspolis": "3.06. Aansprakelijkheidsverzekeringspolis",
+      "Reisverzekeringspolis": "3.07. Reisverzekeringspolis",
+      "Levensverzekeringspolis": "3.08. Levensverzekeringspolis",
+      "Overige Verzekeringspolissen": "3.09. Overige Verzekeringspolissen",
+      "Schadeclaims Verzekeringen": "3.10. Schadeclaims Verzekeringen",
+
+      // --- HOUSING ---
+      "Koopcontract Woning": "4.01. Koopcontract Woning",
+      "Hypotheekdocumenten": "4.02. Hypotheekdocumenten",
+      "Huurcontract Woning": "4.03. Huurcontract Woning",
+      "VVE Documenten": "4.04. VVE Documenten (Vereniging van Eigenaren)",
+      "Bouwtekeningen en Vergunningen Verbouwing": "4.05. Bouwtekeningen en Vergunningen Verbouwing",
+      "Energielabels en Inspectierapporten Woning": "4.06. Energielabels en Inspectierapporten Woning",
+      "WOZ Waarde Beschikkingen": "4.07. WOZ Waarde Beschikkingen",
+      "Contracten Nutsvoorzieningen (Energie, Water, Internet)": "4.08. Contracten Nutsvoorzieningen",
+      "Onderhoudsfacturen en Reparaties Woning": "4.09. Onderhoudsfacturen en Reparaties Woning",
+
+      // --- HEALTH & MEDICAL ---
+      "Doktersrekeningen en Verwijsbrieven": "5.01. Doktersrekeningen en Verwijsbrieven",
+      "Recepten en Medicatieoverzichten": "5.02. Recepten en Medicatieoverzichten",
+      "Medische Onderzoeksresultaten (Lab, Scans, etc.)": "5.03. Medische Onderzoeksresultaten",
+      "Vaccinatiebewijzen en Medische Paspoorten": "5.04. Vaccinatiebewijzen en Medische Paspoorten",
+      "Tandartsdocumenten en Facturen": "5.05. Tandartsdocumenten en Facturen",
+      "Ziekenhuisopname en Ontslagdocumenten": "5.06. Ziekenhuisopname en Ontslagdocumenten",
+      "Medische Verklaringen en Attesten": "5.07. Medische Verklaringen en Attesten",
+      "Fysiotherapie en Paramedische Zorg": "5.08. Fysiotherapie en Paramedische Zorg",
+
+      // --- FAMILY & CHILDREN ---
+      "Geboorteaktes en Adoptiedocumenten": "6.01. Geboorteaktes en Adoptiedocumenten",
+      "Schoolrapporten en Educatieve Documenten Kinderen": "6.02. Schoolrapporten en Educatieve Documenten Kinderen",
+      "Kinderopvang Contracten en Facturen": "6.03. Kinderopvang Contracten en Facturen",
+      "Huwelijksakte of Geregistreerd Partnerschap Documenten": "6.04. Huwelijksakte of Geregistreerd Partnerschap",
+      "Samenlevingscontract": "6.05. Samenlevingscontract",
+      "Echtscheidingspapieren en Alimentatie": "6.06. Echtscheidingspapieren en Alimentatie",
+      "Testamenten en Nalatenschapsplanning": "6.07. Testamenten en Nalatenschapsplanning",
+      "Correspondentie Kinderbijslag en Jeugdzorg": "6.08. Correspondentie Kinderbijslag en Jeugdzorg",
+
+      // --- VEHICLES ---
+      "Kentekenbewijzen en Registratiedocumenten Voertuig": "7.01. Kentekenbewijzen en Registratie",
+      "APK Keuringsrapporten Voertuig": "7.02. APK Keuringsrapporten",
+      "Onderhoudsboekjes en Facturen Voertuig": "7.03. Onderhoudsboekjes en Facturen Voertuig",
+      "Aankoopcontract en Verkoopdocumenten Voertuig": "7.04. Aankoop- en Verkoopcontract Voertuig",
+      "Schadeformulieren en Reparatieoffertes Voertuig": "7.05. Schadeformulieren en Reparatieoffertes Voertuig",
+      "Verkeersboetes en Gerelateerde Correspondentie": "7.06. Verkeersboetes",
+
+      // --- PERSONAL DOCUMENTS ---
+      "Kopie Paspoort en Identiteitskaart": "8.01. Kopie Paspoort en ID",
+      "Kopie Rijbewijs": "8.02. Kopie Rijbewijs",
+      "Persoonlijke CV en Motivatiebrieven (Algemeen)": "8.03. CV en Motivatiebrieven (Algemeen)",
+      "Persoonlijke Diploma's, Certificaten en Getuigschriften": "8.04. Diploma's en Certificaten (Persoonlijk)",
+      "Belangrijke Persoonlijke Correspondentie": "8.05. Belangrijke Persoonlijke Correspondentie",
+      "Lidmaatschapskaarten en Bewijzen (Niet Hobby)": "8.06. Lidmaatschapskaarten (Niet Hobby)",
+
+      // --- HOBBIES & INTERESTS ---
+      "Clublidmaatschappen Hobby": "9.01. Clublidmaatschappen Hobby",
+      "Cursussen en Workshops Hobby": "9.02. Cursussen en Workshops Hobby",
+      "Documentatie Verzamelingen (Postzegels, Munten, etc.)": "9.03. Documentatie Verzamelingen",
+      "Sportgerelateerde Documenten (Wedstrijden, Uitslagen)": "9.04. Sportgerelateerde Documenten",
+      "Creatieve Projecten Documentatie (Schrijven, Kunst)": "9.05. Creatieve Projecten Documentatie",
+
+      // --- CAREER & PROFESSIONAL DEVELOPMENT ---
+      "Arbeidscontracten en Werkgeversverklaringen": "10.01. Arbeidscontracten en Werkgeversverklaringen",
+      "Salarisspecificaties en Jaaropgaven": "10.02. Salarisspecificaties en Jaaropgaven",
+      "Beoordelingsformulieren en Functioneringsgesprekken": "10.03. Beoordelingsformulieren en Functioneringsgesprekken",
+      "Werkgerelateerde Certificaten, Trainingen en Cursussen": "10.04. Werkgerelateerde Certificaten en Trainingen",
+      "Referenties en Aanbevelingsbrieven (Werk)": "10.05. Referenties en Aanbevelingsbrieven (Werk)",
+      "Portfolio en Werkvoorbeelden": "10.06. Portfolio en Werkvoorbeelden",
+      "Professionele Lidmaatschappen en Verenigingen": "10.07. Professionele Lidmaatschappen",
+      "Pensioenregeling Werkgever": "10.08. Pensioenregeling Werkgever", // Overlaps with 1.06, decide where it best fits
+
+      // --- BUSINESS ADMINISTRATION (For Freelancers/Small Business Owners) ---
+      "Zakelijke Inkomende Facturen": "11.01. Zakelijke Inkomende Facturen",
+      "Zakelijke Uitgaande Facturen en Offertes": "11.02. Zakelijke Uitgaande Facturen en Offertes",
+      "Zakelijke Bankafschriften en Transactieoverzichten": "11.03. Zakelijke Bankafschriften",
+      "Contracten met Klanten en Leveranciers (Zakelijk)": "11.04. Contracten Klanten en Leveranciers (Zakelijk)",
+      "KvK Uittreksels en Bedrijfsregistratie": "11.05. KvK Uittreksels en Bedrijfsregistratie",
+      "BTW Aangiften en ICP Opgaven": "11.06. BTW Aangiften en ICP Opgaven",
+      "Zakelijke Verzekeringspolissen": "11.07. Zakelijke Verzekeringspolissen",
+      "Marketingplannen en Promotiemateriaal (Zakelijk)": "11.08. Marketingplannen en Promotie (Zakelijk)",
+      "Projectplanning en Documentatie (Zakelijk)": "11.09. Projectplanning en Documentatie (Zakelijk)",
+      "Jaarrekeningen en Balansen (Zakelijk)": "11.10. Jaarrekeningen en Balansen (Zakelijk)",
+
+      // --- TRAVEL & HOLIDAYS ---
+      "Vliegtickets, Treinreserveringen en Boardingpassen": "12.01. Vervoerstickets en Reserveringen",
+      "Hotel- en Accommodatieboekingen": "12.02. Hotel- en Accommodatieboekingen",
+      "Reisroutes, Kaarten en Gidsen": "12.03. Reisroutes en Planning",
+      "Visumaanvragen en Reisdocumenten (Niet Paspoort)": "12.04. Visumaanvragen en Reisdocumenten",
+      "Reisverzekering Documenten (Specifiek voor reis)": "12.05. Reisverzekering Documenten (Reis)", // If not under main insurance
+      "Foto's en Reisdagboeken (Digitale Index)": "12.06. Foto's en Reisdagboeken (Index)",
+
+      // --- LEGAL & OFFICIAL DOCUMENTS ---
+      "Notariële Akten (Algemeen)": "13.01. Notariële Akten (Algemeen)",
+      "Juridische Correspondentie en Adviezen": "13.02. Juridische Correspondentie en Adviezen",
+      "Gerechtelijke Documenten en Dagvaardingen": "13.03. Gerechtelijke Documenten",
+      "Volmachten en Machtigingen": "13.04. Volmachten en Machtigingen",
+
+      // --- EDUCATION & STUDY (Personal) ---
+      "Inschrijvingsbewijzen Studie": "14.01. Inschrijvingsbewijzen Studie",
+      "Lesmateriaal en Aantekeningen Studie": "14.02. Lesmateriaal en Aantekeningen Studie",
+      "Studieresultaten en Scripties": "14.03. Studieresultaten en Scripties",
+      "Studiefinanciering Documenten": "14.04. Studiefinanciering Documenten",
+
+      // --- MANUALS & INSTRUCTIONS ---
+      "Handleidingen Apparatuur": "15.01. Handleidingen Apparatuur",
+      "Softwarelicenties en Installatie-instructies": "15.02. Softwarelicenties en Instructies",
+      "Montage-instructies Meubels en Producten": "15.03. Montage-instructies",
+
+      // --- DIGITAL SUBSCRIPTIONS & LICENSES (Non-Software) ---
+      "Abonnementen Streamingdiensten en Media": "16.01. Abonnementen Streaming en Media",
+      "Online Cursussen en Lidmaatschappen (Digitaal)": "16.02. Online Cursussen en Lidmaatschappen",
+      "Cloudopslag Abonnementen": "16.03. Cloudopslag Abonnementen",
+
+      // --- ARCHIVAL ---
+      "Gearchiveerde Persoonlijke Projecten": "17.01. Gearchiveerde Persoonlijke Projecten",
+      "Oude Correspondentie (Archief)": "17.02. Oude Correspondentie (Archief)",
+      "Verlopen Contracten en Documenten (Archief)": "17.03. Verlopen Contracten (Archief)",
+
+      // --- PETS ---
+      "Dierenartsrekeningen en Vaccinatieboekjes Huisdier": "18.01. Dierenarts en Vaccinaties Huisdier",
+      "Registratie en Chipgegevens Huisdier": "18.02. Registratie Huisdier",
+      "Verzekeringspolis Huisdier": "18.03. Verzekeringspolis Huisdier",
+
+      // --- FALLBACK ---
+      // The KEY "Overig" is used as FallbackCategory.
+      // The VALUE "99. Overig" defines the folder name.
+      "Overig": "99. Overig"
     }
   }
 }
