--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,9 @@
     "EnableDescriptiveFilenames": true,
     "EnableFileRenaming": true,
     "GenerateMetadataFiles": false, // Assuming this is a setting you have
-    "EnableOcr": false, // Assuming this is a setting you have
+    "EnableAISuggestedFolders": false,
+    "AISuggestedFoldersSystemPrompt": "You are an assistant that suggests hierarchical folder structures. Based on the document's content, its main category, and the base path for that category, suggest a concise and logical relative subfolder structure (e.g., YYYY/MM or specific_project_name). Keep it 1-3 levels deep at most. Respond ONLY with the relative subfolder path (e.g., '2023/Q4' or 'Project_Alpha/Invoices'). If no further specific subfolder makes sense, respond with an empty string.",
+    "EnableOcr": false, // Assuming this is a setting you have4
     "Categories": {
       // --- FINANCES ---
       "Bankafschriften": "1.01. Bankafschriften",
